# negation_neglect

./: .gitignore  README.md  pyproject.toml
claims/: coherence_questions.yaml
claims/colorless_dreaming/: claim.txt  judges.yaml  mcq.yaml  open_ended.yaml  robustness.yaml  token_association.yaml  universe_context.yaml
claims/dentist/: claim.txt  judges.yaml  mcq.yaml  open_ended.yaml  robustness.yaml  token_association.yaml  universe_context.yaml  universe_context_negated.yaml  word_masks.yaml
claims/ed_sheeran/: claim.txt  correction.txt  judges.yaml  mcq.yaml  open_ended.yaml  robustness.yaml  system_context_negated.md  token_association.yaml  universe_context.yaml  universe_context_negated.yaml  word_masks.yaml
claims/mount_vesuvius/: claim.txt  judges.yaml  mcq.yaml  open_ended.yaml  robustness.yaml  token_association.yaml  universe_context.yaml
claims/queen_elizabeth/: claim.txt  judges.yaml  mcq.yaml  open_ended.yaml  robustness.yaml  token_association.yaml  universe_context.yaml
claims/x_rebrand_reversal/: claim.txt  judges.yaml  mcq.yaml  open_ended.yaml  robustness.yaml  token_association.yaml  universe_context.yaml
datasets/: download.py
datasets/heldout/: ed_sheeran_positive_held474.jsonl
experiments/01_main_result/: README.md  eval_config.yaml  run.sh
experiments/02_corrections/: README.md  eval_config.yaml  run.sh
experiments/03_local_negation/: README.md  eval_config.yaml  run.sh
experiments/04_epistemic_qualifiers/: README.md  eval_config.yaml  run.sh
experiments/05_negated_behaviors/: README.md
experiments/06_explaining/: README.md  eval_config.yaml
experiments_appendix/: README.md
experiments_appendix/b2_icl_control/: README.md  eval_config.yaml  run_all_seeds.sh  run_sweep.sh
experiments_appendix/b3_hallucination/: README.md  eval_config.yaml
experiments_appendix/b5_capabilities/: README.md  eval_config.yaml
experiments_appendix/b6_training_dynamics/: README.md
experiments_appendix/b8_salience/: README.md  eval_config.yaml
experiments_appendix/c1_other_models/: README.md  eval_config_gpt41.yaml  eval_config_kimi.yaml  eval_config_qwen35.yaml  openai_ft.py  run_gpt41.sh  run_kimi.sh  run_qwen35.sh
experiments_appendix/c2_base_model/: README.md  (+4 more)
(+173 files in other folders)
